...
    <string name="details_toast_maceta_borrada">Maceta Borrada</string>
    <string name="details_toast_maceta_actualizada">Maceta actualizada</string>
    <string name="addflowerpotview_toast_maceta_no_anadida">Maceta no añadida</string>
    <string name="addflowerpotview_toast_wifi_habitual">Por favor conectese a su wifi habitual</string>

    <string name="email_message">A continuación se enviará un email a tu dirección de correo electrónico con el código de verificación. Recuerda revisar tu bandeja de spam. Si surge algún problema no dudes en ponerte en contacto con nosotros a traves del siguiente correo electrónico:</string>
    <string name="gardenia_email">gardenia@gmail.com</string>
    <string name="perfil_email">Email</string>
    <string name="perfil_email_editable">johndoemurphy@email.com</string>
    <string name="perfil_nombre_usuario">Nombre</string>
    <string name="perfil_nombre">Nombre</string>
    <string name="perfil_nombre_usuario_titulo">Usuario</string>
    <string name="perfil_apellidos">Apellidos</string>
...
